force-app/main/default/objects/OdenDeCompra__c/fields/CampanaPublicitaria__c.field-meta.xml
<CustomField>
    <fullName>CampanaPublicitaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Campana__c</referenceTo>
    <relationshipLabel>Ordenes de Compra</relationshipLabel>
    <relationshipName>Ordenes_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>