force-app/main/default/objects/OdenDeCompra__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Empresa__c</referenceTo>
    <relationshipLabel>Ordenes de Compra</relationshipLabel>
    <relationshipName>OrdenesDeCompra</relationshipName>
    <type>Lookup</type>
</CustomField>