force-app/main/default/objects/OdenDeCompra__c/fields/IDUltimaFirmaRecibido__c.field-meta.xml
<CustomField>
    <fullName>IDUltimaFirmaRecibido__c</fullName>
    <label>ID Última Firma Recibido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>