force-app/main/default/objects/OdenDeCompra__c/fields/SimboloMoneda__c.field-meta.xml
<CustomField>
    <fullName>SimboloMoneda__c</fullName>
    <formula>CASE(CurrencyIsoCode,
&apos;CRC&apos;, &apos;₡&apos;,
&apos;NIO&apos;,&apos;C$&apos;,
&apos;HNL&apos;, &apos;L.&apos;,
&apos;GTQ&apos;,&apos;Q&apos;,
&apos;$&apos;)</formula>
    <label>Símbolo moneda</label>
    <type>Text</type>
</CustomField>